# jarvis_leaderboard_uploader

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/: README.md
jarvis_leaderboard_uploader/: cli.py  git_helper.py  init.py  logger.py  packager.py  runner.py  uploader.py  validator.py
tests/: init.py  test_uploader.py
